--- a/src/components/TrainsNow.scss
+++ b/src/components/TrainsNow.scss
@@ -1,15 +1,8 @@
-body {
-    font-size: 30px;
+.flex-body {
+    display: flex;
+    flex-direction: row;
 }
 
-
-.konvajs-content {
-        background: yellow;
-        width: 100% !important;
-        height: auto !important;
-        padding-bottom: 75%; // height/width*100%;
-        canvas {
-            width: 100% !important;
-            height: 100% !important;
-        }
-    }
+.flex-map {
+    align-content: flex-end;
+}
